--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ section {
 .container {
   width: 90%;
   margin: 0 auto;
-  max-width: 1300px;
+  max-width: 1200px;
 }
 .btn {
   background: var(--primary-color);
@@ -214,23 +214,37 @@ section {
 
 /* Works styles */
 #portfolio {
-  padding: 5rem 0;
 }
+
+/* #portfolio {
+  padding: 5rem 0;
+  border: 1px solid black;
+  margin: 0 auto;
+  width: 100%;
+}
+
 #portfolio .all-items {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 3.5rem;
+  display: none;
 }
 .all-items .item {
   display: flex;
+  max-width: 400px;
   flex-direction: column;
   gap: 1rem;
+  margin: 0 auto;
+}
+.all-items .item .img {
+  overflow: hidden;
 }
 .all-items .item .img img {
   object-fit: cover;
   transition: transform 0.3s;
+  display: none;
 }
 .all-items .item:hover img {
   transform: scale(1.1);
@@ -258,6 +272,7 @@ section {
 .all-items .item .right {
   box-shadow: 0px 0px 10px 0px #2b1e74;
   border-radius: 12px;
+  padding: 1.5rem;
 }
 .all-items .item .right .project_desc {
   text-align: center;
@@ -277,6 +292,7 @@ section {
   }
   #portfolio .all-items .item {
     flex-direction: row;
+    max-width: none;
   }
   #portfolio .all-items .item:nth-child(even) {
     flex-direction: row-reverse;
@@ -305,11 +321,11 @@ section {
   .all-items .right .portfolio_desc {
     font-size: 1.6rem;
   }
-}
+} */
 
 /* About styles */
 
-#about {
+/* #about {
   padding: 10rem 0;
   display: none;
 }
@@ -396,10 +412,10 @@ section {
   #about .about_wrapper {
     flex-direction: column;
   }
-}
+} */
 /* Skills styles */
 
-#skills {
+/* #skills {
   padding: 5rem 0;
 }
 .container-small {
@@ -473,4 +489,4 @@ section {
 }
 #skills {
   display: none;
-}
+} */
